Add code coverage profile to pom.xml